# lp-qknorm-mri

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: implementation-scientist.md  proposal-guard.md  test-runner.md
.claude/commands/: test-and-verify.md
.claude/hooks/: compact-context.sh
configs/: train.yaml
configs/model/: default.yaml
configs/picasso/: default.yaml
configs/training/: default.yaml
docs/: README.md  context.md  phase_01_data.md  phase_02_model.md  phase_03_training.md  phase_04_probes.md  phase_05_analysis.md  progress.md
reports/: p_sweep_v1_report.md  per_fold_metrics.csv  per_stratum_metrics.csv
scripts/: create_skeleton.sh  run_phase4_local.py  submit_sweep.sh  verify_env.py
scripts/slurm/: launch.sh  probe_phase4.sbatch  setup.sh  test_exa_30min.sh  train_worker.sh
src/lpqknorm/: __init__.py
src/lpqknorm/analysis/: __init__.py  aggregation.py  bootstrap.py  effect_size.py  figures.py  probe_curves.py  stratification.py  style.py
src/lpqknorm/cli/: analyze.py  patching.py  preprocess.py  probe.py  train.py
src/lpqknorm/data/: __init__.py  converter.py  datamodule.py  schema.py  splits.py  stratification.py  transforms.py
src/lpqknorm/data/converters/: __init__.py  brats_men.py
src/lpqknorm/models/: __init__.py  attention.py  hooks.py  init.py  lp_qknorm.py  swin_unetr_lp.py
src/lpqknorm/probes/: __init__.py  attention_iou.py  attention_maps.py  base.py  entropy.py  lesion_mass.py  linear_probe.py  logit_gap.py  patching.py  peakiness.py  recorder.py  spatial_loc_error.py  spectral.py  tokenization.py
src/lpqknorm/training/: __init__.py  callbacks.py  logging.py  losses.py  metrics.py  module.py
src/lpqknorm/utils/: __init__.py  exceptions.py  git.py  seeding.py
tests/: conftest.py
tests/fixtures/: synthetic_dataset.py
tests/integration/: test_analyze_cli.py  test_forward_pass.py  test_probe_pipeline.py  test_training_step.py
tests/unit/: test_aggregation.py  test_analysis_stratification.py  test_attention_equivalence.py  test_attention_maps.py  test_bootstrap.py  test_callbacks.py  test_capture_gating.py  test_converter.py  test_datamodule.py  test_effect_size.py  test_figures.py  test_init.py  test_logging.py  test_losses.py  test_lp_qknorm.py  test_metrics.py  test_nan_stability.py  test_patching.py  test_probes_synthetic.py  test_schema.py  test_seeding.py  test_splits.py  test_stratification.py  test_tokenization.py
