[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lpqknorm"
version = "0.1.0"
description = "Mechanistic study of Lp query-key normalization in windowed self-attention for small-lesion segmentation"
readme = "docs/README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mario Pascual González", email = "mario.pg02@gmail.com" },
]
keywords = [
    "medical-imaging",
    "brain-mri",
    "stroke-segmentation",
    "attention-mechanism",
    "swin-transformer",
    "query-key-normalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    # Core deep learning
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "monai>=1.3.0",
    "einops>=0.7.0",
    "pytorch-lightning>=2.1.0",

    # Medical imaging I/O
    "nibabel>=5.0.0",
    "SimpleITK>=2.3.0",

    # Numerical and data
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",

    # Storage
    "h5py>=3.9.0",
    "pyarrow>=14.0.0",

    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Metrics
    "torchmetrics>=1.2.0",

    # Logging and utilities
    "structlog>=23.2.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "nbstripout>=0.7.0",
    "ipython>=8.0.0",
]
wandb = [
    "wandb>=0.16.0",
]

[project.urls]
Repository = "https://github.com/MarioPasc/lp-qknorm-mri"

[project.scripts]
lpqknorm-train = "lpqknorm.cli.train:main"
lpqknorm-preprocess = "lpqknorm.cli.preprocess:main"
lpqknorm-probe = "lpqknorm.cli.probe:main"
lpqknorm-analyze = "lpqknorm.cli.analyze:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lpqknorm = ["py.typed"]

# --- Ruff ---

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
    "NPY",   # numpy-specific rules
    "PT",    # flake8-pytest-style
    "LOG",   # flake8-logging
    "TID",   # flake8-tidy-imports
]
ignore = [
    "E501",    # line too long (formatter handles this)
    "B008",    # do not perform function calls in argument defaults (Hydra uses this)
    "SIM108",  # ternary operator (readability preference)
    "UP007",   # X | Y union syntax in annotations (keep for clarity in complex types)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert is fine in tests
]
"scripts/**/*.py" = [
    "T201",   # print is fine in scripts
]

[tool.ruff.lint.isort]
known-first-party = ["lpqknorm"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# --- Mypy ---

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "monai.*",
    "nibabel.*",
    "SimpleITK.*",
    "h5py.*",
    "hydra.*",
    "omegaconf.*",
    "pandas.*",
    "pytorch_lightning.*",
    "lightning.*",
    "torchmetrics.*",
    "scipy.*",
    "sklearn.*",
    "seaborn.*",
    "structlog.*",
    "rich.*",
    "wandb.*",
    "piq.*",
    "lpips.*",
]
ignore_missing_imports = true

# --- Pytest ---

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: integration tests (slower, may require GPU or data)",
    "slow: slow tests requiring full ATLAS v2.0 dataset",
    "gpu: tests requiring a CUDA GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning:monai.*",
    "ignore::DeprecationWarning:pytorch_lightning.*",
]

# --- Coverage ---

[tool.coverage.run]
source = ["src/lpqknorm"]
omit = ["src/lpqknorm/cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
